# -otus-cpp-basics

./: CMakeLists.txt  README.md  check_value.cpp  check_value.h  example.cpp  main.cpp  random_value.cpp  random_value.h  score_printing.cpp  score_printing.h  statistics.cpp
